parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__identifiers-1.snap
---
source: src/lexer/lexer.rs
description: a_a
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_a",
        ),
        start: 0,
        end: 3,
    },
]
