parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__identifiers-3.snap
---
source: src/lexer/lexer.rs
description: a_
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_",
        ),
        start: 0,
        end: 2,
    },
]
