parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__identifiers-5.snap
---
source: src/lexer/lexer.rs
description: a_a_
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_a_",
        ),
        start: 0,
        end: 4,
    },
]
